<resources>
    <string name="app_name">RoWork Tracker</string>
    <!--    for home-->
    <string name="greetings">Hi! Samudith Tharindaka</string>
    <string name="imageDes">This is an image</string>
    <string name="onGoing">On Going</string>
    <string name="ToDos">To Dos</string>
    <string name="timePlaceholder">00:00:00</string>
    <string name="finished">Finished</string>
    <string name="workTime">Work Time Remaining</string>
    <string name="alarmBtn">Alarm</string>

    <!--    to do activity-->
    <string name="addtask">Add a new Task</string>

    <!--    manageActivity-->
    <string name="header">To Dos > Start</string>
    <string name="imageText">set the time and follow up your works</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>