<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="10dp"
    tools:context=".ToDosManageActivity">

    <!-- Header LinearLayout -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="371dp"
        android:layout_height="89dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/rounded_corners"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/ToDos"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/image_6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ToDos"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- ScrollView containing the LinearLayout for tasks -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="15dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:elevation="8dp"
            android:orientation="vertical">
            <!-- This is where dynamically added tasks will appear -->
        </LinearLayout>
    </ScrollView>

    <!-- Input section for adding new tasks -->
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="15dp">

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/addtask"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/buttonAddTask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ToDos"
            android:scaleType="fitCenter"
            android:src="@drawable/checked" />
    </LinearLayout>

    <!-- Bottom Navigation LinearLayout -->
    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="18dp"
        android:paddingEnd="8dp"
        android:paddingBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageButton3Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/imageDes"
            android:scaleType="fitCenter"
            android:src="@drawable/customization_1"
            tools:src="@drawable/customization_1" />

        <ImageButton
            android:id="@+id/imageButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/imageDes"
            android:cropToPadding="false"
            android:fitsSystemWindows="false"
            android:scaleType="fitCenter"
            android:src="@drawable/_d_house_1" />

        <ImageButton
            android:id="@+id/imageButton2Menu"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTintMode="screen"
            android:contentDescription="@string/imageDes"
            android:scaleType="fitCenter"
            android:src="@drawable/brief_1"
            tools:src="@drawable/brief_1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
